--- a/index.html
+++ b/index.html
@@ -26,7 +26,6 @@
           <a class="logo link" href="./index.html"
             >Web<span class="logo-studio link">Studio</span></a
           >
-
           <ul class="list menu">
             <li class="menu-item">
               <a class="link menu-link current" href="./index.html">Studio</a>
@@ -39,6 +38,18 @@
             </li>
           </ul>
         </nav>
+
+        <button class="mobile-menu-btn-open" type="button">
+          <svg
+            class="mobile-menu-btn-open-icon"
+            width="24"
+            height="24"
+            aria-label="mobile menu open icon"
+          >
+            <use href="./images/icons-menu.svg#icon-icons-menu"></use>
+          </svg>
+        </button>
+
         <address class="contacts">
           <ul class="list contacts-list">
             <li class="contacts-item">
@@ -58,15 +69,15 @@
 
     <main>
       <!-- SECTION TITLE -->
-      <section class="section-title">
+      <!-- <section class="section-title">
         <div class="container">
           <h1 class="main-title">Effective Solutions for Your Business</h1>
           <button type="button" class="main-button">Order Service</button>
         </div>
-      </section>
+      </section> -->
 
       <!-- SECTION FEATURES -->
-      <section class="section-features">
+      <!-- <section class="section-features">
         <div class="container">
           <h2 class="main-features visually-hidden">Features</h2>
 
@@ -128,11 +139,11 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
 
       <!-- SECTION TEAM -->
 
-      <section class="section-team section">
+      <!-- <section class="section-team section">
         <div class="container">
           <h2 class="main-team">Our Team</h2>
           <ul class="team-card list">
@@ -401,11 +412,11 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
 
       <!-- SECTION PORTFOLIO -->
 
-      <section class="section-portfolio section">
+      <!-- <section class="section-portfolio section">
         <div class="container">
           <h2 class="main-portfolio">Our Portfolio</h2>
           <ul class="list project-card-list">
@@ -548,10 +559,10 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
     </main>
     <!-- FOOTER -->
-    <footer class="section-footer">
+    <!-- <footer class="section-footer">
       <div class="container footer-container">
         <div class="footer-container-logo">
           <a class="logo-footer link" href="./index.html"
@@ -643,10 +654,10 @@
           </form>
         </div>
       </div>
-    </footer>
+    </footer> -->
 
     <!-- BECKDROP -->
-    <div class="backdrop is-open">
+    <!-- <div class="backdrop is-open">
       <div class="modal-window">
         <button class="modal-close-btn" type="button">
           <svg
@@ -768,6 +779,51 @@
           </div>
           <button class="data-form-submit-btn" type="submit">Send</button>
         </form>
+      </div>
+    </div> -->
+
+    <!-- MOBILE MENU -->
+
+    <div class="mobile-menu-wrapper">
+      <div class="container mobile-menu-container">
+        <button class="mobile-menu-close-btn" type="button">
+          <svg
+            class="mobile-menu-close-btn-icon"
+            width="8"
+            height="8"
+            aria-label="mobile-menu-close-btn-icon"
+          >
+            <use href="./images/icons.svg#icon-close"></use>
+          </svg>
+        </button>
+        <nav class="mobile-menu-navigation">
+          <ul class="mobile-menu list">
+            <li class="mobile-menu-item">
+              <a class="mobile-menu-btn-link link" href="">Studio</a>
+            </li>
+            <li class="mobile-menu-item">
+              <a class="mobile-menu-btn-link link" href="">Portfolio</a>
+            </li>
+            <li class="mobile-menu-item">
+              <a class="mobile-menu-btn-link link" href="">Contacts</a>
+            </li>
+          </ul>
+        </nav>
+
+        <ul class="mobile-menu-social-list list">
+          <li class="mobile-menu-social-list-link">
+            <a class="mobile-menu-social-list-link link" href=""></a>
+          </li>
+          <li class="mobile-menu-social-list-item">
+            <a class="mobile-menu-social-list-link link" hre linkf=""></a>
+          </li>
+          <li class="mobile-menu-social-list-item">
+            <a class="mobile-menu-social-list-link link" href=""></a>
+          </li>
+          <li class="mobile-menu-social-list-item">
+            <a class="mobile-menu-social-list-link link" href=""></a>
+          </li>
+        </ul>
       </div>
     </div>
   </body>
