--- a/index.html
+++ b/index.html
@@ -69,15 +69,15 @@
 
     <main>
       <!-- SECTION TITLE -->
-      <!-- <section class="section-title">
+      <section class="section-title">
         <div class="container">
           <h1 class="main-title">Effective Solutions for Your Business</h1>
           <button type="button" class="main-button">Order Service</button>
         </div>
-      </section> -->
+      </section>
 
       <!-- SECTION FEATURES -->
-      <!-- <section class="section-features">
+      <section class="section-features">
         <div class="container">
           <h2 class="main-features visually-hidden">Features</h2>
 
@@ -139,18 +139,19 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
 
       <!-- SECTION TEAM -->
 
-      <!-- <section class="section-team section">
-        <div class="container">
+      <section class="section-team section">
+        <div class="container team-container">
           <h2 class="main-team">Our Team</h2>
           <ul class="team-card list">
             <li class="team-card-item">
               <img
                 class="team-image"
                 src="./images/Mark.jpg"
+                srcset="./images/mobile-1x-2x/Mark-mobile-2x.jpg"
                 width="264"
                 height="260"
                 alt="portret-Mark"
@@ -217,6 +218,7 @@
               <img
                 class="team-image"
                 src="./images/Tom.jpg"
+                srcset="./images/mobile-1x-2x/Tom-mobile-2x.jpg"
                 width="264"
                 height="260"
                 alt="portret-Tom"
@@ -283,6 +285,7 @@
               <img
                 class="team-image"
                 src="./images/Camila.jpg"
+                srcset="./images/mobile-1x-2x/Camila-mobile-2x.jpg"
                 width="264"
                 height="260"
                 alt="portret-Camila"
@@ -349,6 +352,7 @@
               <img
                 class="team-image"
                 src="./images/Daniel.jpg"
+                srcset="./images/mobile-1x-2x/Daniel-mobile-2x.jpg"
                 width="264"
                 height="260"
                 alt="portret-Daniel"
@@ -412,23 +416,43 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
 
       <!-- SECTION PORTFOLIO -->
 
-      <!-- <section class="section-portfolio section">
+      <section class="section-portfolio section">
         <div class="container">
           <h2 class="main-portfolio">Our Portfolio</h2>
           <ul class="list project-card-list">
             <li class="project-card-list-item">
               <div class="portfolio-img">
-                <img
-                  class="portfolio-list-img"
-                  src="./images/banking-app.jpg"
-                  width="360"
-                  height="300"
-                  alt="banking-app"
-                />
+                <picture>
+                  <source
+                    srcset="
+                      ./images/desktop-1x-2x/banking-app-desktop-1x.jpg 1x,
+                      ./images/desktop-1x-2x/banking-app-desktop-2x.jpg 2x
+                    "
+                    media="(min-width: 1158px)"
+                  />
+                  <source
+                    srcset="
+                      ./images/tablet-1x-2x/banking-app-tablet-1x.jpg 1x,
+                      ./images/tablet-1x-2x/banking-app-tablet-2x.jpg 2x
+                    "
+                    media="(min-width: 768px)"
+                  />
+                  <source
+                    srcset="
+                      ./images/mobile-1x-2x/banking-app-mobile-1x.jpg 1x,
+                      ./images/mobile-1x-2x/banking-app-mobile-2x.jpg 2x
+                    "
+                    media="(max-width: 767px)"
+                  />
+                  <img
+                    src="./images/mobile-1x-2x/banking-app-mobile-1x.jpg"
+                    alt="portfolio picture"
+                  />
+                </picture>
                 <p class="overlay">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -559,10 +583,10 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
     </main>
     <!-- FOOTER -->
-    <!-- <footer class="section-footer">
+    <footer class="section-footer">
       <div class="container footer-container">
         <div class="footer-container-logo">
           <a class="logo-footer link" href="./index.html"
@@ -629,7 +653,7 @@
             </li>
           </ul>
         </div>
-        <div class="container footer-form-blok">
+        <div class="footer-form-blok">
           <p class="footer-form-link">Subscribe</p>
           <form class="footer-form">
             <label class="footer-form-label">
@@ -654,10 +678,10 @@
           </form>
         </div>
       </div>
-    </footer> -->
+    </footer>
 
     <!-- BECKDROP -->
-    <!-- <div class="backdrop is-open">
+    <div class="backdrop">
       <div class="modal-window">
         <button class="modal-close-btn" type="button">
           <svg
@@ -769,59 +793,114 @@
                   <use href="./images/icons.svg#icon-chekmark"></use>
                 </svg>
               </span>
-              I accept the terms and conditions of the<a
-                class="accent-color"
-                href=""
-              >
-                Privacy Policy</a
-              >
+              <span>
+                I accept the terms and conditions of the<a
+                  class="accent-color"
+                  href=""
+                >
+                  Privacy Policy</a
+                >
+              </span>
             </label>
           </div>
           <button class="data-form-submit-btn" type="submit">Send</button>
         </form>
       </div>
-    </div> -->
+    </div>
 
     <!-- MOBILE MENU -->
 
-    <div class="mobile-menu-wrapper">
-      <div class="container mobile-menu-container">
-        <button class="mobile-menu-close-btn" type="button">
-          <svg
-            class="mobile-menu-close-btn-icon"
-            width="8"
-            height="8"
-            aria-label="mobile-menu-close-btn-icon"
-          >
-            <use href="./images/icons.svg#icon-close"></use>
-          </svg>
-        </button>
-        <nav class="mobile-menu-navigation">
-          <ul class="mobile-menu list">
-            <li class="mobile-menu-item">
-              <a class="mobile-menu-btn-link link" href="">Studio</a>
+    <div class="mobile-menu-wrapper is-open">
+      <button class="mobile-menu-close-btn" type="button">
+        <svg
+          class="mobile-menu-close-btn-icon"
+          width="8"
+          height="8"
+          aria-label="mobile-menu-close-btn-icon"
+        >
+          <use href="./images/icons.svg#icon-close"></use>
+        </svg>
+      </button>
+      <nav class="mobile-menu-navigation">
+        <ul class="mobile-menu list">
+          <li class="mobile-menu-item">
+            <a class="mobile-menu-btn-link link" href="">Studio</a>
+          </li>
+          <li class="mobile-menu-item">
+            <a class="mobile-menu-btn-link link" href="">Portfolio</a>
+          </li>
+          <li class="mobile-menu-item">
+            <a class="mobile-menu-btn-link link" href="">Contacts</a>
+          </li>
+        </ul>
+      </nav>
+      <div class="mobile-box">
+        <address class="mob-contacts">
+          <ul class="list mob-contacts-list">
+            <li class="mob-contacts-item">
+              <a class="link mob-contacts-link" href="tel:+110001111111"
+                >+11 (000) 111-11-11</a
+              >
             </li>
-            <li class="mobile-menu-item">
-              <a class="mobile-menu-btn-link link" href="">Portfolio</a>
-            </li>
-            <li class="mobile-menu-item">
-              <a class="mobile-menu-btn-link link" href="">Contacts</a>
+            <li class="mob-contacts-item">
+              <a class="link mob-contacts-link" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
             </li>
           </ul>
-        </nav>
+        </address>
 
-        <ul class="mobile-menu-social-list list">
-          <li class="mobile-menu-social-list-link">
-            <a class="mobile-menu-social-list-link link" href=""></a>
+        <ul class="mob-soc-list">
+          <li class="footer-list-item list">
+            <a href="" class="footer-social-link">
+              <svg
+                class="footer-list-icon"
+                width="24"
+                height="24"
+                aria-label="instagram-footer-icon"
+              >
+                <use href="./images/icons.svg#icon-instagram"></use>
+              </svg>
+            </a>
           </li>
-          <li class="mobile-menu-social-list-item">
-            <a class="mobile-menu-social-list-link link" hre linkf=""></a>
+
+          <li class="footer-list-item list">
+            <a href="" class="footer-social-link">
+              <svg
+                class="footer-list-icon"
+                width="24"
+                height="24"
+                aria-label="twitter-footer-icon"
+              >
+                <use href="./images/icons.svg#icon-twitter"></use>
+              </svg>
+            </a>
           </li>
-          <li class="mobile-menu-social-list-item">
-            <a class="mobile-menu-social-list-link link" href=""></a>
+
+          <li class="footer-list-item list">
+            <a href="" class="footer-social-link">
+              <svg
+                class="footer-list-icon"
+                width="24"
+                height="24"
+                aria-label="facebook-footer-icon"
+              >
+                <use href="./images/icons.svg#icon-facebook"></use>
+              </svg>
+            </a>
           </li>
-          <li class="mobile-menu-social-list-item">
-            <a class="mobile-menu-social-list-link link" href=""></a>
+
+          <li class="footer-list-item list">
+            <a href="" class="footer-social-link">
+              <svg
+                class="footer-list-icon"
+                width="24"
+                height="24"
+                aria-label="linkedin-footer-icon"
+              >
+                <use href="./images/icons.svg#icon-linkedin"></use>
+              </svg>
+            </a>
           </li>
         </ul>
       </div>
