--- a/index.html
+++ b/index.html
@@ -449,7 +449,7 @@
                     media="(max-width: 767px)"
                   />
                   <img
-                    src="./images/mobile-1x-2x/banking-app-mobile-1x.jpg"
+                    src="./images/mobile-1x-2x/banking-app-mobile-1x.jpg 1x"
                     alt="portfolio picture"
                   />
                 </picture>
@@ -469,13 +469,33 @@
 
             <li class="project-card-list-item">
               <div class="portfolio-img">
-                <img
-                  class="portfolio-list-img"
-                  src="./images/cashless-payment.jpg"
-                  width="360"
-                  height="300"
-                  alt="cashless-payment"
-                />
+                <picture>
+                  <source
+                    srcset="
+                      ./images/desktop-1x-2x/cashless-payment-desktop-1x.jpg 1x,
+                      ./images/desktop-1x-2x/cashless-payment-desktop-2x.jpg 2x
+                    "
+                    media="(min-width: 1158px)"
+                  />
+                  <source
+                    srcset="
+                      ./images/tablet-1x-2x/cashless-payment-tablet-1x.jpg 1x,
+                      ./images/tablet-1x-2x/cashless-payment-tablet-2x.jpg 2x
+                    "
+                    media="(min-width: 768px)"
+                  />
+                  <source
+                    srcset="
+                      ./images/mobile-1x-2x/cashless-payment-mobile-1x.jpg 1x,
+                      ./images/mobile-1x-2x/cashless-payment-mobile-2x.jpg 2x
+                    "
+                    media="(max-width: 767px)"
+                  />
+                  <img
+                    src="images/mobile-1x-2x/cashless-payment-mobile-1x.jpg 1x"
+                    alt="portfolio picture"
+                  />
+                </picture>
                 <p class="overlay">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -492,13 +512,33 @@
 
             <li class="project-card-list-item">
               <div class="portfolio-img">
-                <img
-                  class="portfolio-list-img"
-                  src="./images/meditation-app.jpg"
-                  width="360"
-                  height="300"
-                  alt="meditation-app"
-                />
+                <picture>
+                  <source
+                    srcset="
+                      ./images/desktop-1x-2x/meditation-app-desktop-1x.jpg 1x,
+                      ./images/desktop-1x-2x/meditation-app-desktop-2x.jpg 2x
+                    "
+                    media="(min-width: 1158px)"
+                  />
+                  <source
+                    srcset="
+                      ./images/tablet-1x-2x/meditation-app-tablet-1x.jpg 1x,
+                      ./images/tablet-1x-2x/meditation-app-tablet-2x.jpg 2x
+                    "
+                    media="(min-width: 768px)"
+                  />
+                  <source
+                    srcset="
+                      ./images/mobile-1x-2x/meditation-app-mobile-1x.jpg 1x,
+                      ./images/mobile-1x-2x/meditation-app-mobile-2x.jpg 2x
+                    "
+                    media="(max-width: 767px)"
+                  />
+                  <img
+                    src="images/mobile-1x-2x/meditation-app-mobile-1x.jpg 1x"
+                    alt="portfolio picture"
+                  />
+                </picture>
                 <p class="overlay">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -515,13 +555,33 @@
 
             <li class="project-card-list-item">
               <div class="portfolio-img">
-                <img
-                  class="portfolio-list-img"
-                  src="./images/taxi-service.jpg"
-                  width="360"
-                  height="300"
-                  alt="taxi-service"
-                />
+                <picture>
+                  <source
+                    srcset="
+                      ./images/desktop-1x-2x/taxi-service-desktop-1x.jpg 1x,
+                      ./images/desktop-1x-2x/taxi-service-desktop-2x.jpg 2x
+                    "
+                    media="(min-width: 1158px)"
+                  />
+                  <source
+                    srcset="
+                      ./images/tablet-1x-2x/taxi-service-tablet-1x.jpg 1x,
+                      ./images/tablet-1x-2x/taxi-service-tablet-2x.jpg 2x
+                    "
+                    media="(min-width: 768px)"
+                  />
+                  <source
+                    srcset="
+                      ./images/mobile-1x-2x/taxi-service-mobile-1x.jpg 1x,
+                      ./images/mobile-1x-2x/taxi-service-mobile-2x.jpg 2x
+                    "
+                    media="(max-width: 767px)"
+                  />
+                  <img
+                    src="images/mobile-1x-2x/taxi-service-mobile-1x.jpg 1x"
+                    alt="portfolio picture"
+                  />
+                </picture>
                 <p class="overlay">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -538,13 +598,33 @@
 
             <li class="project-card-list-item">
               <div class="portfolio-img">
-                <img
-                  class="portfolio-list-img"
-                  src="./images/screen-illustrations.jpg"
-                  width="360"
-                  height="300"
-                  alt="screen-illustrations"
-                />
+                <picture>
+                  <source
+                    srcset="
+                      ./images/desktop-1x-2x/screen-illustrations-desktop-1x.jpg 1x,
+                      ./images/desktop-1x-2x/screen-illustrations-desktop-2x.jpg 2x
+                    "
+                    media="(min-width: 1158px)"
+                  />
+                  <source
+                    srcset="
+                      ./images/tablet-1x-2x/screen-illustrations-tablet-1x.jpg 1x,
+                      ./images/tablet-1x-2x/screen-illustrations-tablet-2x.jpg 2x
+                    "
+                    media="(min-width: 768px)"
+                  />
+                  <source
+                    srcset="
+                      ./images/mobile-1x-2x/screen-illustrations-mobile-1x.jpg 1x,
+                      ./images/mobile-1x-2x/screen-illustrations-mobile-2x.jpg 2x
+                    "
+                    media="(max-width: 767px)"
+                  />
+                  <img
+                    src="images/mobile-1x-2x/screen-illustrations-mobile-1x.jpg 1x"
+                    alt="portfolio picture"
+                  />
+                </picture>
                 <p class="overlay">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -561,13 +641,33 @@
 
             <li class="project-card-list-item">
               <div class="portfolio-img">
-                <img
-                  class="portfolio-list-img"
-                  src="./images/online-courses.jpg"
-                  width="360"
-                  height="300"
-                  alt="online-courses"
-                />
+                <picture>
+                  <source
+                    srcset="
+                      ./images/desktop-1x-2x/online-courses-desktop-1x.jpg 1x,
+                      ./images/desktop-1x-2x/online-courses-desktop-2x.jpg 2x
+                    "
+                    media="(min-width: 1158px)"
+                  />
+                  <source
+                    srcset="
+                      ./images/tablet-1x-2x/online-courses-tablet-1x.jpg 1x,
+                      ./images/tablet-1x-2x/online-courses-tablet-1x.jpg 2x
+                    "
+                    media="(min-width: 768px)"
+                  />
+                  <source
+                    srcset="
+                      ./images/mobile-1x-2x/online-courses-mobile-1x.jpg 1x,
+                      ./images/mobile-1x-2x/online-courses-mobile-2x.jpg 2x
+                    "
+                    media="(max-width: 767px)"
+                  />
+                  <img
+                    src="images/mobile-1x-2x/online-courses-mobile-1x.jpg 1x"
+                    alt="portfolio picture"
+                  />
+                </picture>
                 <p class="overlay">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -810,7 +910,7 @@
 
     <!-- MOBILE MENU -->
 
-    <div class="mobile-menu-wrapper is-open">
+    <div class="mobile-menu-wrapper">
       <button class="mobile-menu-close-btn" type="button">
         <svg
           class="mobile-menu-close-btn-icon"
