--- a/index.html
+++ b/index.html
@@ -652,7 +652,7 @@
                   <source
                     srcset="
                       ./images/tablet-1x-2x/online-courses-tablet-1x.jpg 1x,
-                      ./images/tablet-1x-2x/online-courses-tablet-1x.jpg 2x
+                      ./images/tablet-1x-2x/online-courses-tablet-2x.jpg 2x
                     "
                     media="(min-width: 768px)"
                   />
@@ -924,7 +924,7 @@
       <nav class="mobile-menu-navigation">
         <ul class="mobile-menu list">
           <li class="mobile-menu-item">
-            <a class="mobile-menu-btn-link link" href="">Studio</a>
+            <a class="mobile-studio-activ link" href="">Studio</a>
           </li>
           <li class="mobile-menu-item">
             <a class="mobile-menu-btn-link link" href="">Portfolio</a>
@@ -943,7 +943,9 @@
               >
             </li>
             <li class="mob-contacts-item">
-              <a class="link mob-contacts-link" href="mailto:info@devstudio.com"
+              <a
+                class="link mob-contacts-link-post"
+                href="mailto:info@devstudio.com"
                 >info@devstudio.com</a
               >
             </li>
