--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 
   <body>
     <!-- HEADER -->
+
     <header class="page-header">
       <div class="container page-header-container">
         <nav class="nav-list">
@@ -69,6 +70,7 @@
 
     <main>
       <!-- SECTION TITLE -->
+
       <section class="section-title">
         <div class="container">
           <h1 class="main-title">Effective Solutions for Your Business</h1>
@@ -77,6 +79,7 @@
       </section>
 
       <!-- SECTION FEATURES -->
+
       <section class="section-features">
         <div class="container">
           <h2 class="main-features visually-hidden">Features</h2>
@@ -449,7 +452,7 @@
                     media="(max-width: 767px)"
                   />
                   <img
-                    src="./images/mobile-1x-2x/banking-app-mobile-1x.jpg 1x"
+                    src="./images/mobile-1x-2x/banking-app-mobile-1x.jpg"
                     alt="portfolio picture"
                   />
                 </picture>
@@ -492,7 +495,7 @@
                     media="(max-width: 767px)"
                   />
                   <img
-                    src="images/mobile-1x-2x/cashless-payment-mobile-1x.jpg 1x"
+                    src="images/mobile-1x-2x/cashless-payment-mobile-1x.jpg"
                     alt="portfolio picture"
                   />
                 </picture>
@@ -535,7 +538,7 @@
                     media="(max-width: 767px)"
                   />
                   <img
-                    src="images/mobile-1x-2x/meditation-app-mobile-1x.jpg 1x"
+                    src="images/mobile-1x-2x/meditation-app-mobile-1x.jpg"
                     alt="portfolio picture"
                   />
                 </picture>
@@ -578,7 +581,7 @@
                     media="(max-width: 767px)"
                   />
                   <img
-                    src="images/mobile-1x-2x/taxi-service-mobile-1x.jpg 1x"
+                    src="images/mobile-1x-2x/taxi-service-mobile-1x.jpg"
                     alt="portfolio picture"
                   />
                 </picture>
@@ -621,7 +624,7 @@
                     media="(max-width: 767px)"
                   />
                   <img
-                    src="images/mobile-1x-2x/screen-illustrations-mobile-1x.jpg 1x"
+                    src="images/mobile-1x-2x/screen-illustrations-mobile-1x.jpg"
                     alt="portfolio picture"
                   />
                 </picture>
@@ -664,7 +667,7 @@
                     media="(max-width: 767px)"
                   />
                   <img
-                    src="images/mobile-1x-2x/online-courses-mobile-1x.jpg 1x"
+                    src="images/mobile-1x-2x/online-courses-mobile-1x.jpg"
                     alt="portfolio picture"
                   />
                 </picture>
@@ -685,7 +688,9 @@
         </div>
       </section>
     </main>
+
     <!-- FOOTER -->
+
     <footer class="section-footer">
       <div class="container footer-container">
         <div class="footer-container-logo">
@@ -781,6 +786,7 @@
     </footer>
 
     <!-- BECKDROP -->
+
     <div class="backdrop">
       <div class="modal-window">
         <button class="modal-close-btn" type="button">
